--- a/themes/fab/css-2.0.0/style.css
+++ b/themes/fab/css-2.0.0/style.css
@@ -1239,6 +1239,7 @@ a:hover .nameZoom {
 	overflow: hidden;
 	font-size: .75rem;
 	line-height: 1;
+	padding-bottom: 4px;
 }
 
 .person_box_template .chart_textbox .name1{
