--- a/themes/minimal/css-2.0.0/style.css
+++ b/themes/minimal/css-2.0.0/style.css
@@ -588,6 +588,7 @@ table {
 	overflow: hidden;
 	font-size: .75rem;
 	line-height: 1;
+	padding-bottom: 4px;
 }
 
 .person_box_template .chart_textbox .name1{
