--- a/themes/webtrees/css-2.0.0/style.css
+++ b/themes/webtrees/css-2.0.0/style.css
@@ -1720,6 +1720,7 @@ td.descriptionbox a {
 	overflow: hidden;
 	font-size: .75rem;
 	line-height: 1;
+	padding-bottom: 4px;
 }
 
 .person_box_template img,
