--- a/themes/xenea/css-2.0.0/style.css
+++ b/themes/xenea/css-2.0.0/style.css
@@ -1691,6 +1691,7 @@ a:hover .nameZoom {
 	overflow: hidden;
 	font-size: .75rem;
 	line-height: 1;
+	padding-bottom: 4px;
 }
 
 .person_box_template img,
